# ePasal-backend

./: .gitignore  Cargo.toml  README.md
databases/auth/: schema.sql
databases/conversation/: schema.sql
databases/khalti/: schema.sql
databases/products/: schema.sql
databases/soldProducts/: schema.sql
databases/temp/: schema.sql
src/: main.rs
src/databases/: auth.rs  mod.rs
src/databases/auth/: logindb.rs  messages.rs  temp_user.rs  tempdb.rs
src/routes/: admin.rs  admin_insert.rs  auth.rs  chats.rs  conversation.rs  inventory.rs  khalti.rs  login.rs  mod.rs  payment.rs  product.rs  user.rs  verify.rs
src/routes/admin/: chat.rs  dashboard.rs  insert.rs  inventory.rs
src/routes/chats/: chatbot.rs  conversation.rs  messages.rs
src/routes/payment/: khalti.rs  verifypay.rs
src/services/: brandpage.rs  email.rs  mod.rs  search.rs  suggestion.rs  toppicks.rs
