[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "3"
tokio = { version = "1", features = ["macros", "process"] }
reqwest = { version = "0.11", features = ["blocking"] }