[package]
name = "ePasal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.5"
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
futures = "0.3"