[package]
name = "ePasal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.5"
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "bigdecimal", "rust_decimal"] }
dotenvy = "0.15"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"        
uuid = { version = "1", features = ["v4"] }  
lettre = { version = "0.10.4", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
tokio = { version = "1", features = ["full"] }
argon2 = "0.5"
rand_core = "0.6"
actix-multipart = "0.4"
futures-util = "0.3"
sanitize-filename = "0.5"
actix-files = "0.6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
bigdecimal = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-format = "0.4"
rust_decimal = { version = "1.30.0", features = ["serde"] }